--- a/Express/calculator/index.html
+++ b/Express/calculator/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="A very basic calculator app built using Express for most of the logic.">
 </head>
 <body>
-  <form action="">
+  <form action="./" method="post">
     <h1>Calculator</h1>
     <input type="text" name="num1" placeholder="First Number">
     <input type="text" name="num2" placeholder="Second Number">
