--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -69,25 +69,25 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="./styles.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
   </head>
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form action="/" method="POST">
     <img class="mb-4" src="./images/download.jpg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Sign Up to My Newsletter!</h1>
 
     <div class="form-floating">
-      <input type="text" class="form-control top" id="fName" placeholder="First Name" required autofocus>
+      <input type="text" name="fName" class="form-control top" id="fName" placeholder="First Name" required autofocus>
       <label for="fName">First Name</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control middle" id="lName" placeholder="Last Name" required>
+      <input type="text" name="lName" class="form-control middle" id="lName" placeholder="Last Name" required>
       <label for="lName">Last Name</label>
     </div>
     <div class="form-floating">
-      <input type="email" class="form-control bottom" id="mail" placeholder="Email" required>
+      <input type="email" name="mail" class="form-control bottom" id="mail" placeholder="Email" required>
       <label for="mail">Email</label>
     </div>
 
