Atomic commits to track progress better and retrace steps quicker

--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -75,7 +75,7 @@
     
 <main class="form-signin w-100 m-auto">
   <form action="/" method="POST">
-    <img class="mb-4" src="./images/download.jpg" alt="" width="72" height="57">
+    <img class="mb-4" src="./images/closeup.jpg" alt="" width="72" height="72" style="border-radius: 12px; object-fit: cover;">
     <h1 class="h3 mb-3 fw-normal">Sign Up to My Newsletter!</h1>
 
     <div class="form-floating">
